fixed mobile footer collapse sections

--- a/src/css/scss/_components/_footer.scss
+++ b/src/css/scss/_components/_footer.scss
@@ -209,7 +209,7 @@ a.footer-social-youtube {
   }
   &.language-selector{
     .dropdown-hover-toggle{
-      padding-left:20px;
+      padding-left:16px;
     }
     .dropdown-hover-menu{
       @include el-hidden(right); // so it's right-justified.
